...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    tools:context=".ui.group_member.GroupMemberFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_group_user"
        app:layout_constraintBottom_toBottomOf="parent"
...
<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--        android:id="@+id/swipe_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_group_members"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layoutManager="LinearLayoutManager"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />
...
