<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhiyong.tingxie.ui.group_member.GroupMemberActivity">
    <item
        android:id="@+id/action_delete_group"
        android:orderInCategory="100"
        android:title="@string/delete_group"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />
</menu>
